RESOLVED FIXED110888
[TexMap] Ignore layer repaint request when drawsContent is false
https://bugs.webkit.org/show_bug.cgi?id=110888
Summary [TexMap] Ignore layer repaint request when drawsContent is false
Allan Sandfeld Jensen
Reported 2013-02-26 09:22:48 PST
As long as drawsContent is false we should ignore requests for repaints. A full repaint will be requested anyway when drawsContent is set true. This also matches Chromium and CF behavior.
Attachments
Patch (2.28 KB, patch)
2013-02-26 09:24 PST, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2013-02-26 09:24:15 PST
WebKit Review Bot
Comment 2 2013-02-26 11:02:04 PST
Comment on attachment 190302 [details] Patch Clearing flags on attachment: 190302 Committed r144078: <http://trac.webkit.org/changeset/144078>
WebKit Review Bot
Comment 3 2013-02-26 11:02:07 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.