third_party/WebKit/Source/WebCore/platform/graphics/texmap/GraphicsLayerTextureMapper.cpp
@@ -88,7 +88,7 @@ void GraphicsLayerTextureMapper::willBeDestroyed()
 */
 void GraphicsLayerTextureMapper::setNeedsDisplay()
 {
-    if (!m_hasOwnBackingStore)
+    if (!drawsContent() || !m_hasOwnBackingStore)
         return;
 
     m_needsDisplay = true;
@@ -108,7 +108,7 @@ void GraphicsLayerTextureMapper::setContentsNeedsDisplay()
 */
 void GraphicsLayerTextureMapper::setNeedsDisplayInRect(const FloatRect& rect)
 {
-    if (!m_hasOwnBackingStore)
+    if (!drawsContent() || !m_hasOwnBackingStore)
         return;
 
     if (m_needsDisplay)
@@ -278,8 +278,8 @@ void GraphicsLayerTextureMapper::setDrawsContent(bool value)
 {
     if (value == drawsContent())
         return;
-    notifyChange(DrawsContentChange);
     GraphicsLayer::setDrawsContent(value);
+    notifyChange(DrawsContentChange);
 
     if (value && m_hasOwnBackingStore)
         setNeedsDisplay();
